--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,8 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
+  margin-right: -33px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
